--- a/Boilerplate/App_Master/Boilerplate.master
+++ b/Boilerplate/App_Master/Boilerplate.master
@@ -13,27 +13,27 @@
 <html class="no-js">
 <!--<![endif]-->
 <head id="head" runat="server">
-    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <uc:MetaData runat="server" ID="FalafelMetaData" />
+    <uc:MetaData runat="server" ID="MasterMetaData" />
     <title></title>
-    <sf:javascriptembedcontrol id="script1" runat="server" scriptembedposition="InPlace" url="/sfv604100/Sitefinity/WebsiteTemplates/Boilerplate/JS/script.top.min.js" />
+    <sf:javascriptembedcontrol id="script1" runat="server" scriptembedposition="InPlace" url="~/Sitefinity/WebsiteTemplates/Boilerplate/JS/script.top.min.js" />
     <sf:resourcelinks id="ResourceLinks1" runat="server">
         <sf:ResourceFile JavaScriptLibrary="JQuery" />
-        <sf:ResourceFile Name="Telerik.Sitefinity.Resources.Scripts.Kendo.kendo.all.min.js" />
+        <sf:ResourceFile Name="Telerik.Sitefinity.Resources.Scripts.Kendo.kendo.web.min.js" />
     </sf:resourcelinks>
 </head>
 <!--  ========================================================================== -->
-<!--  upd: 13/05/2013 | Based on h5bp.com v4.2.0 | credits go where credits due  -->
+<!--  upd: 03/10/2013 | Based on h5bp.com v4.3.0 | credits go where credits due  -->
 <!--  ========================================================================== -->
 <!-- TODO: Change paths /Sitefinity/WebsiteTemplates/Boilerplate appropiately    -->
 <!-- TODO: Edit MetaData.ascx to adjust properties and paths                     -->
 <!--  ========================================================================== -->
 <body class="standard">
     <!--[if lt IE 7]>
-            <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
-        <![endif]-->
+        <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+    <![endif]-->
     <form id="aspnetForm" runat="server">
         <telerik:RadScriptManager ID="RadScriptManager1" EnableScriptGlobalization="True" EnableScriptLocalization="False" runat="server" ></telerik:RadScriptManager>
             <a accesskey="s" href="#cpw_main" id="sfSkip" class="visuallyhidden">
@@ -87,7 +87,7 @@
             <!-- no content below - scriptwrapper is purely for js or css widgets in sitefinity  -->
             <!--  ============================================================================== -->
             <div id="ScriptWrapper" runat="server" title="Only place scripts and styles in this region">
-                <script type="text/javascript" src="/sfv604100/Sitefinity/WebsiteTemplates/Boilerplate/JS/script.bottom.min.js"></script>
+                <script type="text/javascript" src="~/Sitefinity/WebsiteTemplates/Boilerplate/JS/script.bottom.min.js"></script>
                 <asp:ContentPlaceHolder ID="cph_scriptsandstyles" runat="server" />
                 <!--  ========================================================================== -->
             </div>
