--- a/Bootstrap/App_Themes/Bootstrap/Global/sfnormalize.less
+++ b/Bootstrap/App_Themes/Bootstrap/Global/sfnormalize.less
@@ -1,7 +1,7 @@
 ﻿/*!
- * ============================================================================ 
- * SF|Boilerplated based on H5BP v4.2.0 | sfnormalize.less
- * ============================================================================ 
+ * =========================================================================== 
+ * SF|Boilerplated based on Bootstrap v2.3.1 | sfnormalize.less
+ * ===========================================================================
  */
 
 /* #region less variables and mixins */
@@ -110,8 +110,8 @@ h6 { margin: 2.33em 0; font-size: 0.67em; }
 /*  ------------------------------------------------------------------------*/
 /* #region sitefinity and helper styles */
 /*  ------------------------------------------------------------------------*/
-body.standard.sfPageEditor.zeContentMode div#ScriptWrapper { display: block; background: @reset_mark-color-bg; -moz-opacity: 0.4; opacity: 0.4; font-size:small;text-align:center; }
-body.standard.sfPageEditor.zeContentMode div#ScriptWrapper:before { content:"-- ONLY PLACE STYLE WIDGETS AND SCRIPT WIDGETS BELOW THIS AREA --";}
+body.standard.sfPageEditor.zeContentMode div#ScriptWrapper { display: block; background: @reset_mark-color-bg; text-align: center; font-size: small; -moz-opacity: 0.4; opacity: 0.4; }
+    body.standard.sfPageEditor.zeContentMode div#ScriptWrapper:before { content: "-- ONLY PLACE STYLE WIDGETS AND SCRIPT WIDGETS BELOW THIS AREA --"; }
 .ScriptWrapper, .sfDisplayNone { display: none; }
 .sfimageWrp { overflow: hidden; }
     .sfimageWrp img, .sfContentBlock img { max-width: 100%; width: auto; height: auto; }
@@ -123,9 +123,9 @@ body.standard.sfPageEditor.zeContentMode div#ScriptWrapper:before { content:"-- 
 .sfDisplayNone { display: none; }
 .ir { overflow: hidden; border: 0; background-color: transparent; *text-indent: -9999px; }
     .ir:before { display: block; width: 0; height: 150%; content: ""; }
-.left { float: left; } 
-.right { float: right; } 
-.visible { visibility: visible; } 
+.left { float: left; }
+.right { float: right; }
+.visible { visibility: visible; }
 .hidden { display: none !important; visibility: hidden; }
 .visuallyhidden { position: absolute; overflow: hidden; clip: rect(0 0 0 0); margin: -1px; padding: 0; width: 1px; height: 1px; border: 0; }
     .visuallyhidden.focusable:active, .visuallyhidden.focusable:focus { position: static; overflow: visible; clip: auto; margin: 0; width: auto; height: auto; }
