--- a/Bootstrap/App_Master/Bootstrap.master
+++ b/Bootstrap/App_Master/Bootstrap.master
@@ -20,7 +20,7 @@
     <title></title>
 </head>
 <!--  ========================================================================== -->
-<!--  upd: 04/10/2013 | Based on Twitter Bootstrap v2.3.1                        -->
+<!--  upd: 19/10/2013 | Based on Twitter Bootstrap v2.3.1                        -->
 <!--  ========================================================================== -->
 <!-- TODO: Change paths /Sitefinity/WebsiteTemplates/Bootstrap appropiately      -->
 <!--  ========================================================================== -->
@@ -29,7 +29,7 @@
             <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
         <![endif]-->
     <form id="aspnetForm" runat="server">
-        <telerik:radscriptmanager id="RadScriptManager1" compositescript-scriptmode="Release" enablescriptglobalization="True" enablescriptlocalization="False" runat="server" compositescript-notifyscriptloaded="True" loadscriptsbeforeui="True" outputcompression="Forced">
+        <telerik:RadScriptManager ID="RadScriptManager1" CompositeScript-ScriptMode="Release" EnableScriptGlobalization="True" EnableScriptLocalization="False" runat="server" CompositeScript-NotifyScriptLoaded="True" LoadScriptsBeforeUI="True" OutputCompression="Forced" AjaxFrameworkMode="Disabled">
             <CompositeScript>
                 <Scripts>
                     <asp:ScriptReference Name="MicrosoftAjax.js" Assembly="System.Web.Extensions" />
@@ -39,7 +39,7 @@
                     <asp:ScriptReference Path="~/App_Data/Sitefinity/WebsiteTemplates/Bootstrap/JS/bootstrap.min.js" />
                 </Scripts>
             </CompositeScript>
-        </telerik:radscriptmanager>
+        </telerik:RadScriptManager>
         <a accesskey="s" href="#cpw_main" id="sfSkip" class="visuallyhidden">
             <asp:Literal ID="skipToMainContentLiteral" runat="server" Text='<%$Resources:PageResources, SkipToTheMainContent %>' /></a>
         <!--  ============================================================================== -->
@@ -88,7 +88,7 @@
         <!-- no content below - scriptwrapper is purely for js or css widgets in sitefinity  -->
         <!--  ============================================================================== -->
         <div id="ScriptWrapper" clientidmode="static" runat="server" title="Only place scripts and styles in this region">
-            <script type="text/javascript" src="~/Sitefinity/WebsiteTemplates/Bootstrap/JS/script.bottom.min.js" defer="defer" async="async"></script>
+            <script type="text/javascript" src="<%= Page.ResolveUrl("~/Sitefinity/WebsiteTemplates/Bootstrap/JS/script.bottom.min.js") %>" defer="defer" async="async"></script>
             <asp:ContentPlaceHolder ID="cph_scriptsandstyles" runat="server" />
             <!--  ========================================================================== -->
         </div>
