--- a/Twbs/App_Master/twbs.master
+++ b/Twbs/App_Master/twbs.master
@@ -25,7 +25,7 @@
     <title></title>
 </head>
 <!--  ========================================================================== -->
-<!--  upd: 04/10/2013 | Based on Twitter Bootstrap v3.0.0                        -->
+<!--  upd: 19/10/2013 | Based on Twitter Bootstrap v3.0.0                        -->
 <!--  ========================================================================== -->
 <!-- TODO: Change paths /Sitefinity/WebsiteTemplates/twbs appropiately           -->
 <!--  ========================================================================== -->
@@ -34,7 +34,7 @@
             <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a>.</p>
         <![endif]-->
     <form id="aspnetForm" runat="server">
-        <telerik:radscriptmanager id="RadScriptManager1" compositescript-scriptmode="Release" enablescriptglobalization="True" enablescriptlocalization="False" runat="server" compositescript-notifyscriptloaded="True" loadscriptsbeforeui="True" outputcompression="Forced">
+        <telerik:RadScriptManager ID="RadScriptManager1" CompositeScript-ScriptMode="Release" EnableScriptGlobalization="True" EnableScriptLocalization="False" runat="server" CompositeScript-NotifyScriptLoaded="True" LoadScriptsBeforeUI="True" OutputCompression="Forced" AjaxFrameworkMode="Disabled">
             <CompositeScript>
                 <Scripts>
                     <asp:ScriptReference Name="MicrosoftAjax.js" Assembly="System.Web.Extensions" />
@@ -46,7 +46,7 @@
                     <asp:ScriptReference Path="~/App_Data/Sitefinity/WebsiteTemplates/twbs/JS/bootstrap.min.js" />
                 </Scripts>
             </CompositeScript>
-        </telerik:radscriptmanager>
+        </telerik:RadScriptManager>
         <a accesskey="s" href="#cpw_main" id="sfSkip" class="sr-only">
             <asp:Literal ID="skipToMainContentLiteral" runat="server" Text='<%$Resources:PageResources, SkipToTheMainContent %>' /></a>
         <!--  ============================================================================== -->
@@ -68,8 +68,6 @@
                 <asp:ContentPlaceHolder ID="cph_footer" runat="server" />
             </footer>
         </div>
-        <!--  ============================================================================== -->
-
         <!--  ============================================================================== -->
         <!-- no content below - scriptwrapper is purely for js or css widgets in sitefinity  -->
         <!--  ============================================================================== -->
