upd: Bootstrap v3.0.1 and sf 6.2 compatibility
Including #ZoneEditor workaround bug introduced in Sitefinity v6.2

--- a/Twbs/App_Themes/twbs/LESS/sfnormalize.less
+++ b/Twbs/App_Themes/twbs/LESS/sfnormalize.less
@@ -1,6 +1,6 @@
 ﻿/*!
  * =========================================================================== 
- * SF|Boilerplated based on Bootstrap v3.0.0 | sfnormalize.less
+ * SF|Boilerplated based on Bootstrap v3.0.1 | sfnormalize.less
  * ===========================================================================
  */
 
@@ -92,6 +92,8 @@ body.standard.sfPageEditor.zeContentMode div#ScriptWrapper { display: block; bac
 .clearfix:before, .clearfix:after { display: table; content: " "; }
 .clearfix:after { clear: both; }
 .clearfix { *zoom: 1; }
+// sitefinity 6.2 layout editor zoneeditor hack
+#ZoneEditor {overflow: visible !important;}
 /*  ------------------------------------------------------------------------*/
 /* #endregion */
 /*  ------------------------------------------------------------------------*/
